Overflow fix for mobile device

--- a/src/App.css
+++ b/src/App.css
@@ -76,6 +76,19 @@
 
 .scroll-container {
   height: 440px; /* set the height of the container */
-  width: 100%; /* set the width of the container */
+  width: auto; /* set the width of the container */
   overflow-y: scroll; /* enable vertical scrolling */
 }
+
+.ScrollStyle {
+   width: "100%";
+   height: "8rem";
+    display: "flex";
+    overflow: "hidden";
+    /* scrollbar-width: none;
+    -ms-overflow-style: none;  */
+  }
+
+  /* .ScrollStyle::-webkit-scrollbar {
+    display: none;
+} */
